[gd_scene load_steps=14 format=3 uid="uid://dn1h2pxlyaobc"]

[ext_resource type="Script" uid="uid://ckorcpo8868rl" path="res://scripts/ball_instantiate.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://de22qjjkkh6hi" path="res://assets/bowling_lane_rework.png" id="2_85g3d"]
[ext_resource type="Script" uid="uid://brysfofd5vy33" path="res://scripts/pin_placer.gd" id="3_jyhfs"]
[ext_resource type="PackedScene" uid="uid://dc6tx8660oron" path="res://scenes/gutterball_zone.tscn" id="3_tipki"]
[ext_resource type="Script" uid="uid://cbk7xdlymrrbb" path="res://scripts/bowling_pin_reset.gd" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://sh08ovmdqjcq" path="res://assets/bowl_button_unpressed.png" id="6_85g3d"]
[ext_resource type="FontFile" uid="uid://dkc7k4o42ms5u" path="res://assets/BitcountGridDouble-VariableFont_CRSV,ELSH,ELXP,slnt,wght.ttf" id="6_o6xl0"]
[ext_resource type="Texture2D" uid="uid://b4bc03cryfeof" path="res://assets/bowl_button_pressed.png" id="7_choun"]
[ext_resource type="Script" uid="uid://cvjhb30xkki2j" path="res://scripts/score_label.gd" id="7_tipki"]
[ext_resource type="Script" uid="uid://cxpfkxag78dlm" path="res://scripts/g_ball_label.gd" id="10_choun"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(494, 1065)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_tipki"]
b = Vector2(0, 1065)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya4ey"]
size = Vector2(256, 128)

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="BowlingAlley" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(360, 640)
texture = ExtResource("2_85g3d")

[node name="BallCatcher" type="Area2D" parent="."]
position = Vector2(480, 50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallCatcher"]
position = Vector2(-9, 484.5)
shape = SubResource("RectangleShape2D_sugp2")

[node name="Gutters" type="Node" parent="."]

[node name="GutterballZone" parent="Gutters" instance=ExtResource("3_tipki")]
position = Vector2(283, 83)

[node name="GutterballZone2" parent="Gutters" instance=ExtResource("3_tipki")]
position = Vector2(673, 86)

[node name="StaticBody2D" type="StaticBody2D" parent="Gutters"]
position = Vector2(249, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gutters/StaticBody2D"]
shape = SubResource("SegmentShape2D_tipki")

[node name="StaticBody2D2" type="StaticBody2D" parent="Gutters"]
position = Vector2(320, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gutters/StaticBody2D2"]
shape = SubResource("SegmentShape2D_tipki")
one_way_collision = true
one_way_collision_margin = 50.0

[node name="StaticBody2D3" type="StaticBody2D" parent="Gutters"]
position = Vector2(632, 1065)
rotation = 3.1415927
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gutters/StaticBody2D3"]
shape = SubResource("SegmentShape2D_tipki")
one_way_collision = true
one_way_collision_margin = 50.0

[node name="StaticBody2D4" type="StaticBody2D" parent="Gutters"]
position = Vector2(703, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gutters/StaticBody2D4"]
shape = SubResource("SegmentShape2D_tipki")

[node name="PinPositions" type="Node" parent="."]
script = ExtResource("3_jyhfs")

[node name="PinPosition1" type="Marker2D" parent="PinPositions" groups=["Row1"]]
unique_name_in_owner = true
position = Vector2(480, 360)
script = ExtResource("4_tbgi4")

[node name="PinPosition2" type="Marker2D" parent="PinPositions" groups=["Row1", "Row2"]]
unique_name_in_owner = true
position = Vector2(450, 310)
script = ExtResource("4_tbgi4")

[node name="PinPosition3" type="Marker2D" parent="PinPositions" groups=["Row1", "Row2"]]
unique_name_in_owner = true
position = Vector2(510, 310)
script = ExtResource("4_tbgi4")

[node name="PinPosition4" type="Marker2D" parent="PinPositions" groups=["Row1", "Row3"]]
unique_name_in_owner = true
position = Vector2(420, 260)
script = ExtResource("4_tbgi4")

[node name="PinPosition5" type="Marker2D" parent="PinPositions" groups=["Row1", "Row3"]]
unique_name_in_owner = true
position = Vector2(480, 260)
script = ExtResource("4_tbgi4")

[node name="PinPosition6" type="Marker2D" parent="PinPositions" groups=["Row1", "Row3"]]
unique_name_in_owner = true
position = Vector2(540, 260)
script = ExtResource("4_tbgi4")

[node name="PinPosition7" type="Marker2D" parent="PinPositions" groups=["Row1", "Row4"]]
unique_name_in_owner = true
position = Vector2(390, 210)
script = ExtResource("4_tbgi4")

[node name="PinPosition8" type="Marker2D" parent="PinPositions" groups=["Row1", "Row4"]]
unique_name_in_owner = true
position = Vector2(450, 210)
script = ExtResource("4_tbgi4")

[node name="PinPosition9" type="Marker2D" parent="PinPositions" groups=["Row1", "Row4"]]
unique_name_in_owner = true
position = Vector2(510, 210)
script = ExtResource("4_tbgi4")

[node name="PinPosition10" type="Marker2D" parent="PinPositions" groups=["Row1", "Row4"]]
unique_name_in_owner = true
position = Vector2(570, 210)
script = ExtResource("4_tbgi4")

[node name="BowlButton" type="TouchScreenButton" parent="."]
position = Vector2(34, 1111)
texture_normal = ExtResource("6_85g3d")
texture_pressed = ExtResource("7_choun")
shape = SubResource("RectangleShape2D_ya4ey")

[node name="ResetTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="SetupTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 27.0
offset_top = 25.0
offset_right = 201.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("6_o6xl0")
theme_override_font_sizes/font_size = 40
script = ExtResource("7_tipki")

[node name="GBallLabel" type="Label" parent="."]
offset_left = 27.0
offset_top = 138.0
offset_right = 201.0
offset_bottom = 195.0
theme_override_fonts/font = ExtResource("6_o6xl0")
theme_override_font_sizes/font_size = 40
script = ExtResource("10_choun")

[connection signal="ball_gone" from="." to="PinPositions" method="_on_main_ball_gone"]
[connection signal="body_exited" from="BallCatcher" to="." method="_on_ball_catcher_body_exited"]
[connection signal="pressed" from="BowlButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="ResetTimer" to="PinPositions" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition1" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition2" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition3" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition4" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition5" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition6" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition7" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition8" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition9" method="_on_reset_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="PinPositions/PinPosition10" method="_on_reset_timer_timeout"]
